[web-4679] Fixed article alignment

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -80,6 +80,24 @@ h6 {
   }
 }
 
+.sidebar {
+  min-width: 17em;
+}
+
+.sidenav-title {
+  font-size: 15px;
+  position: relative;
+}
+
+.sidenav-item {
+  border-radius: 4px;
+  color: $text_color;
+  display: block;
+  font-weight: 300;
+  margin-bottom: 10px;
+  padding: 10px 1rem;
+}
+
 /***** Alerts *****/
 
 .alert-warning {
